@@ -1,7 +1,7 @@
 package onl.tesseract.core.command.staff;
 
-import onl.tesseract.core.cosmetics.CosmeticManager;
 import onl.tesseract.core.cosmetics.Cosmetic;
+import onl.tesseract.core.cosmetics.CosmeticManager;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabCompleter;
@@ -9,7 +9,6 @@ import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class CosmeticCompleter implements TabCompleter {
@@ -19,16 +18,16 @@ public class CosmeticCompleter implements TabCompleter {
     {
         if(!commandSender.hasPermission("cosmetic.admin"))return null;
         if (args.length == 1)
-            return Stream.of("give", "remove").filter(sub -> sub.startsWith(args[0])).collect(Collectors.toList());
+            return Stream.of("give", "remove").filter(sub -> sub.startsWith(args[0])).toList();
         if (args.length == 3)
         {
             return CosmeticManager.getTypes()
-                         .stream().filter(sub -> sub.startsWith(args[2])).collect(Collectors.toList());
+                         .stream().filter(sub -> sub.startsWith(args[2])).toList();
 
         }
         if (args.length == 4){
             return CosmeticManager.getCosmetics(args[2]).stream().map(Cosmetic::toString)
-                                  .filter(sub -> sub.startsWith(args[3])).collect(Collectors.toList());
+                                  .filter(sub -> sub.startsWith(args[3])).toList();
         }
         return null;
     }
